@@ -1,6 +1,8 @@
 Changes between 1.3.2 and 1.3.3a1
 ==================================================
 
+- fix issue113: assertion representation problem with triple-quoted strings 
+  (and possibly other cases)
 - make conftest loading detect that a conftest file with the same 
   content was already loaded, avoids surprises in nested directory structures
   that can be produced e.g. by Hudson. It alleviates the need to use 
